--- a/Server/Makefile
+++ b/Server/Makefile
@@ -4,12 +4,12 @@ CC = gcc
 CFLAGS = -g -Wall
 
 .PHONY: default all clean
-
+	
 default: $(TARGET)
 all: default
 
 OBJECTS = $(patsubst %.c, %.o, $(wildcard *.c))
-HEADERS = $(wildcard *.h)
+HEADERS = $(wildcard *.h) 
 
 %.o: %.c $(HEADERS)
 		$(CC) $(CFLAGS) -c $< -o $@
@@ -17,7 +17,7 @@ HEADERS = $(wildcard *.h)
 .PRECIOUS: $(TARGET) $(OBJECTS)
 
 $(TARGET): $(OBJECTS)
-		$(CC) $(OBJECTS) -Wall $(LIBS) -o $@
+		$(CC) $(HEADER) $(OBJECTS) -Wall $(LIBS) -o $@
 
 clean:
 		-rm -f *.o
